<resources>
    <string name="app_name">DiabetesSelfManagement-Wundergrads</string>
    <string name="select_your_graph">Select Your Graph</string>
    <string-array name="spinner_types">
        <item>Exercise</item>
        <item>Diet</item>
        <item>Medication</item>
    </string-array>
    <string-array name="spinner_AM_PM">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="spinner_month">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item>
        <item>8</item><item>9</item><item>10</item><item>11</item><item>12</item>
    </string-array>
    <string-array name="spinner_day">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item>
        <item>8</item><item>9</item><item>10</item><item>11</item><item>12</item><item>13</item><item>14</item>
        <item>15</item><item>16</item><item>17</item><item>18</item><item>19</item><item>20</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item><item>26</item><item>27</item>
        <item>28</item><item>29</item><item>30</item><item>31</item>
    </string-array>
    <string-array name="spinner_year">
        <item>2016</item><item>2017</item><item>2018</item><item>2019</item><item>2020</item>
    </string-array>
    <string-array name="spinner_hour">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item>
        <item>8</item><item>9</item><item>10</item><item>11</item><item>12</item>
    </string-array>
    <string-array name="spinner_minute">
        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item><item>06</item><item>07</item>
        <item>08</item><item>09</item><item>10</item><item>11</item><item>12</item><item>13</item><item>14</item>
        <item>15</item><item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item><item>26</item><item>27</item>
        <item>28</item><item>29</item><item>30</item><item>31</item><item>32</item><item>33</item><item>34</item><item>35</item>
        <item>36</item><item>37</item>
        <item>38</item><item>39</item><item>40</item><item>41</item><item>42</item><item>43</item><item>44</item>
        <item>45</item><item>46</item><item>47</item><item>48</item><item>49</item><item>50</item><item>51</item>
        <item>52</item><item>53</item><item>54</item><item>55</item><item>56</item><item>57</item><item>58</item>
        <item>59</item>
    </string-array>

    <string name="bgl">BGL</string>f
    <string name="medication">Medication</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diet</string>
    <string name="regimen">Regimen</string>
    <string name="graphs">Graphs</string>
    <string name="title_activity_graph_display">GraphDisplay</string>
    <string name="title_activity_table_display">TableDisplay</string>
    <string name="min_bgl">Enter Min BGL</string>
    <string name="max_bgl">Enter Max BGL</string>
    <string name="start_date">Enter Start Date</string>
    <string name="end_date">Enter End Date</string>
    <string name="earliest_time">Enter Earliest Time</string>
    <string name="latest_time">Enter Latest Time</string>
    <string name="filter_bgl_query">Filter BGL Query</string>
    <string name="blood_glucose_image">Blood Glucose Reading Image</string>
    <string name="filter_diet_query">Filter Diet Query</string>
    <string name="exact_match">Exact Match?</string>
    <string name="diet_image">Diet Image</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="medication_image">Medication Image</string>
    <string name="regimen_image">Regimen Image</string>
    <string name="enter_diet">Enter Diet</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="enter_food_name">Enter Food</string>
    <string name="filter_exercise_query">Filter Exercise Query</string>
    <string name="enter_exercise">Enter Exercise</string>
    <string name="filter_medication_query">Filter Medication Query</string>
    <string name="enter_medication">Enter Medication</string>
    <string name="enter_bgl">Enter BGL</string>
    <string name="submit">Submit</string>
    <string name="title_activity_input_and_query">InputAndQuery</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="AM_PM">AM/PM</string>
    <string name="enter_notification_date">Set notification date</string>
    <string name="enter_notification_time">Set notification time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_input_query">InputQuery</string>
    <string name="title_activity_graph_table_stats">GraphTableStats</string>
    <string name="title_activity_regimen">RegimenActivity</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_regimen_component">Enter Regimen Component</string>
</resources>
