<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ImageViewRegimen"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/regimen_image"
        android:scaleType="matrix"
        android:contentDescription="@string/regimen_image" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="20"
        android:id="@+id/EditTextRegimen"
        android:hint="@string/enter_regimen_component"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:id="@+id/EditTextTime"
        android:hint="@string/enter_time"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:inputType="time" />

    <Spinner
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerType"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown"
        android:entries="@array/spinner_types"
        android:focusableInTouchMode="false"
        android:textAlignment="center" />

    <Button
        style="?android:attr/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/ButtonSubmitRegimen"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>