<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uwm.wundergrads.diabetesselfmanagement_wundergrads.MedicationFilter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filter_medication_query"
        android:id="@+id/textViewFilterMedicationHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewMedication"
        android:layout_below="@+id/textViewFilterMedicationHeader"
        android:layout_centerHorizontal="true"
        android:src="@drawable/medication_image" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMedication"
        android:layout_below="@+id/imageViewMedication"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_medication"
        android:layout_alignRight="@+id/imageViewMedication"
        android:layout_alignEnd="@+id/imageViewMedication" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exact_match"
        android:id="@+id/checkBoxExactMatch"
        android:layout_below="@+id/imageViewMedication"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextStartDate"
        android:layout_below="@+id/editTextMedication"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/checkBoxExactMatch"
        android:hint="@string/start_date"
        android:layout_alignRight="@+id/editTextMedication"
        android:layout_alignEnd="@+id/editTextMedication" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextEndDate"
        android:layout_below="@+id/editTextStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextMedication"
        android:layout_alignEnd="@+id/editTextMedication"
        android:hint="@string/end_date" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextEarliestTime"
        android:layout_below="@+id/editTextEndDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextEndDate"
        android:layout_alignEnd="@+id/editTextEndDate"
        android:hint="@string/earliest_time" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextLatestTime"
        android:layout_below="@+id/editTextEarliestTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextEarliestTime"
        android:layout_alignEnd="@+id/editTextEarliestTime"
        android:hint="@string/latest_time" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/search_go"
        android:id="@+id/buttonSearch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
